css/main.css
/* ... */
.fp-reach {
  background: #ededed url(../assets/linework.png) repeat center center;
  background-size: auto 100%;
  text-shadow: 0 0 20px #ededed, 0 0 15px #ededed, 0 0 10px #ededed, 0 0 5px #ededed, 0 0 5px #ededed;
}
.fp-share .right {
  padding-left: 20px;
  background: url(../assets/oss_logo.png) no-repeat center center;
  background-size: 60%;
}
.fp-people {
  background: url(../assets/people-bg.jpg) no-repeat center center;
  background-size: cover;
  position: relative;
}
.fp-people .right {
  background: url(../assets/people-fg.png) no-repeat center center;
  background-size: contain;
  background-position-y: top;
}

.fp-people .hardware-image {
    background: url(../assets/hardware-optimization.jpg) no-repeat center center;
    background-size: 90%;
    min-height: 300px;
}

.fp-share video {
  width: 100%;
}
/* .fp-share .split {
  min-height: auto;
} */
.fp-scroll {
  padding: 20px 0;
  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
          box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
  z-index: 4;
  background: #1f1f1f;
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
}
.fp-scroll img {
  opacity: 0.5;
}
.fp-logos {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}
.fp-logos img {
  height: 80px;
  margin: 10px;
  -webkit-filter: grayscale(1);
          filter: grayscale(1);
}
.fp-logos img:hover {
  -webkit-filter: none;
          filter: none;
}

.bounce {
  -webkit-animation: bounce 2s ease 0s infinite both;
          animation: bounce 2s ease 0s infinite both;
}
@-webkit-keyframes bounce {
	0%, 20%, 50%, 80%, 100% {
    -webkit-transform: translateY(0);
            transform: translateY(0);
  }
	40% {
    -webkit-transform: translateY(-16px);
            transform: translateY(-16px);
  }
	60% {
    -webkit-transform: translateY(-8px);
            transform: translateY(-8px);
  }
}
@keyframes bounce {
	0%, 20%, 50%, 80%, 100% {
    -webkit-transform: translateY(0);
            transform: translateY(0);
  }
	40% {
    -webkit-transform: translateY(-16px);
            transform: translateY(-16px);
  }
	60% {
    -webkit-transform: translateY(-8px);
            transform: translateY(-8px);
  }
}

/* MEDIA QUERIES */

.mobile-show {
  display: none;
}

.small-show {
  display: none;
}

@media (max-width: 1279px) {
  .card {
    -ms-flex-preferred-size: calc(50% - 20px);
        flex-basis: calc(50% - 20px);
  }
  .fp-section .grid .card:last-child {
    display: none;
  }
}

@media (max-width: 900px) {
  .mobile-hide {
    display: none;
  }
  .mobile-show {
    display: initial;
  }
  footer .sitemap {
    display: none;
  }
  .fp-section .split > div {
    -ms-flex-preferred-size: 100%;
        flex-basis: 100%;
  }
  .fp-section .split.codesplit > div {
    -webkit-box-flex: 0;
        -ms-flex: 0 0 100%;
            flex: 0 0 100%;
  }
  .fp-dark .split {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: reverse;
        -ms-flex-direction: row-reverse;
            flex-direction: row-reverse;
  }
  .card {
    -ms-flex-preferred-size: 100%;
        flex-basis: 100%;
  }
  .experiment .cols > div {
    -ms-flex-preferred-size: 100%;
        flex-basis: 100%;
    min-width: auto;
  }
  .fp-section .grid .card:last-child {
    display: block;
  }
  .fp-section .iframe-container {
    margin-top: 0 !important;
  }
  .fp-reach {
    background-size: 200% auto;
  }
  .fp-people .right {
    min-height: 300px;
  }
}

@media (max-width: 600px) {
  header .brand {
    font-size: 4.5em;
  }
  header .oneliner {
    font-size: 1.8em;
  }
  .fp-section, .content {
    padding-left: 20px;
    padding-right: 20px;
  }
  .page-logos img {
      width: 100%;
      vertical-align: middle;
  }
}

/* news */

.news .fp-section-wide.fp-people {
    border-top: 10px solid #efefef;
}
.news .fp-section-wide.fp-people:first-of-type {
    border-top: none;
}
p.news-date {
    width: 100%;
    font-size: 1.2em;
}
h3.headline {
    text-align: left;
    width: 100%;
    margin-top: 0;
    font-size: 2.2em;
}
.read-more {
    font-weight: bold;
}

